--- a/interfaces/wizard/index.html
+++ b/interfaces/wizard/index.html
@@ -2,35 +2,39 @@
 <form action="./one" method="post">
     <div class="container">
         <div id="inner">
-         <div id="content" class="bigger">
-            <div id="rightGreyText">$T('wizard-version') $version</div>
-            <br /><h1>$T('wizard-quickstart')</h1><br />
-            <hr />
-            <div class="bigger">
-                <h3>$T('opt-language')</h3>
-                $T('explain-language')<br /><br />
-                <div class="main-container">
-                  <!--#for $l, $language in $languages#-->
-                    <label class="language">
-                      <br />$language<br /><input type="radio" name="lang" id="$l" value="$l" <!--#if $lang == $l then 'checked="checked"' else ''#--> />
-                    </label>
-                  <!--#end for#-->
-                  <div class="spacer"></div>
+            <div id="content" class="bigger">
+                <div id="rightGreyText">$T('wizard-version') $version</div>
+                <br />
+                <h1>$T('wizard-quickstart')</h1>
+                <br />
+                <hr />
+                <div class="bigger">
+                    <h3>$T('opt-language')</h3>
+                    $T('explain-language')<br /><br />
+                    <div class="main-container">
+                        <!--#for $l, $language in $languages#-->
+                        <label class="language <!--#if $lang == $l then 'language-active' else ''#-->">
+                            $language<br />
+                            <input type="radio" name="lang" id="$l" value="$l" <!--#if $lang == $l then 'checked="checked"' else ''#--> />
+                        </label>
+                        <!--#end for#-->
+                        <div class="spacer"></div>
+                    </div>
                 </div>
-                
             </div>
             <hr />
-            <div class="full-width">
-              <table class="full-width">
-                <tr>
-                  <td class="align-center"><a class="btn btn-danger" href="./exit"><span class="glyphicon glyphicon-remove"></span> $T('wizard-exit')</a></td>
-                  <td class="align-center"><button class="btn btn-default">$T('wizard-start') <span class="glyphicon glyphicon-chevron-right"></span></button></td>
-                </tr>
-              </table>
+            <br />
+            <div class="row">
+                <div class="col-xs-4 text-center">
+                    <a class="btn btn-danger" href="./exit"><span class="glyphicon glyphicon-remove"></span> $T('wizard-exit')</a>
+                </div>
+                <div class="col-xs-4 text-center">
+                </div>
+                <div class="col-xs-4 text-center">
+                    <button class="btn btn-default">$T('wizard-start') <span class="glyphicon glyphicon-chevron-right"></span></button>
+                </div>
             </div>
-         </div>
         </div>
     </div>
 </form>
-
 <!--#include $webdir + "/inc_bottom.tmpl"#-->
