--- a/interfaces/wizard/three.html
+++ b/interfaces/wizard/three.html
@@ -1,46 +1,46 @@
 <!--#include $webdir + "/inc_top.tmpl"#-->
+<script type="text/javascript">
+    <!--#include raw $webdir + "/static/javascript/restart.js"#-->
+</script>
 <div class="container">
     <div id="inner">
-     <div id="content" class="bigger">
-        <div id="rightGreyText">$T('wizard-version') $version</div>
-        <br /><h1>$T('wizard-quickstart')</h1> <h2>$num</h2><br />
+        <div id="content" class="bigger">
+            <div id="rightGreyText">$T('wizard-version') $version</div>
+            <br />
+            <h1>$T('wizard-quickstart')</h1>
+            <h2>$num</h2>
+            <br />
+            <hr />
+            <br/><br/>
+            <h4 id="restarting" class="align-center">$T('wizard-restarting')</h4>
+            <h4 id="complete" class="align-center success hidden">$T('wizard-complete')</h4>
+            <br />
+            <br/>
+            <div id="tips" class="hidden">
+                $T('wizard-tip1') <span class="bold">$T('wizard-tip2')</span><br/>
+                <!--#set $tip3 = $T('wizard-tip3') % ''#-->
+                $tip3<br/><br/>
+                <div class="quoteBlock">
+                    <!--#set $i = 0#-->
+                    <!--#for $url in $urls#-->
+                    <!--#set $i = $i+1#-->
+                    <a href="$url">$url</a><!--#if $i != len($urls)#--><br /><!--#end if#-->
+                    <!--#end for#-->
+                </div>
+                <br/>
+                $T('wizard-tip4')
+                <br/><br/>
+                $T('wizard-tip-wiki') <a target="_blank" href="$helpuri">wiki</a>
+            </div>
+        </div>
         <hr />
-
-        <script type="text/javascript" src="static/javascript/jquery.js"></script>
-        <script type="text/javascript" src="static/javascript/restart.js"></script>
-        <br/><br/>
-        <h4 id="restarting" class="align-center">$T('wizard-restarting')</h4>
-        <h4 id="complete" class="align-center success hidden">$T('wizard-complete')</h4>
-        <br />
         <br/>
-        <div id="tips" class="hidden">
-        $T('wizard-tip1') <span class="bold">$T('wizard-tip2')</span><br/>
-        <!--#set $tip3 = $T('wizard-tip3') % ''#-->
-        $tip3<br/><br/>
-        <div class="quoteBlock">
-        <!--#set $i = 0#-->
-        <!--#for $url in $urls#-->
-          <!--#set $i = $i+1#-->
-          <a href="$url">$url</a><!--#if $i != len($urls)#--><br /><!--#end if#-->
-        <!--#end for#-->
-        </div><br/>
-        $T('wizard-tip4')
-        <br/><br/>
-        $T('wizard-tip-wiki') <a href="$helpuri">wiki</a>
-        </div>
-        </div>
-        <hr /><br/>
-        <div class="full-width">
-        <table class="full-width">
-          <tr class="align-center">
-            <td>
+        <div class="row">
+            <div class="col-xs-12 text-center">
                 <input type="hidden" name="session" id="apikey" value="$session"/>
                 <a class="btn btn-default disabled" href="$access_url">$T('wizard-goto') <span class="glyphicon glyphicon-chevron-right"></span></a>
-            </td>
-          </tr>
-        </table>
+            </div>
         </div>
     </div>
 </div>
-
 <!--#include $webdir + "/inc_bottom.tmpl"#-->
