--- a/interfaces/wizard/two.html
+++ b/interfaces/wizard/two.html
@@ -1,40 +1,45 @@
 <!--#include $webdir + "/inc_top.tmpl"#-->
-<script type="text/javascript">
-    <!--#include raw $webdir + "/static/javascript/restart.js"#-->
-</script>
+
 <div class="container">
     <div id="inner">
         <div id="content" class="bigger">
             <div id="rightGreyText">$T('wizard-version') $version</div>
             <h1>$T('wizard-quickstart')</h1>
             <hr />
-            <br/><br/>
-            <h4 id="restarting" class="align-center">$T('wizard-restarting')</h4>
-            <h4 id="complete" class="align-center success hidden">$T('wizard-complete')</h4>
-            <br />
-            <br/>
-            <div id="tips" class="hidden">
-                $T('wizard-tip1') <span class="bold">$T('wizard-tip2')</span><br/>
-                <!--#set $tip3 = $T('wizard-tip3') % ''#-->
-                $tip3<br/><br/>
-                <div class="quoteBlock">
-                    <!--#set $i = 0#-->
-                    <!--#for $url in $urls#-->
-                    <!--#set $i = $i+1#-->
-                    <a href="$url">$url</a><!--#if $i != len($urls)#--><br /><!--#end if#-->
-                    <!--#end for#-->
-                </div>
-                <br/>
-                $T('wizard-tip4')
-                <br/><br/>
-                $T('wizard-tip-wiki') <a target="_blank" href="$helpuri">wiki</a>
+            <h2 class="align-center success">$T('wizard-complete')</h2>
+            <br>
+            <p>$T('wizard-tip1') <strong>$T('wizard-tip2')</strong></p>
+            <p>$T('wizard-tip4')</p>
+
+            <div class="quoteBlock">
+                <!--#for $url in $urls#-->
+                    <a href="$url">$url</a><br />
+                <!--#end for#-->
             </div>
+
+            <hr/>
+
+            <p><strong>$T('opt-complete_dir')</strong></p>
+            <div class="quoteBlock">
+                $complete_dir
+                <a href="${access_url}config/folders" class="indented"><span class="glyphicon glyphicon-cog"></span></a>
+            </div>
+
+            <p><strong>$T('opt-download_dir')</strong></p>
+            <div class="quoteBlock">
+                $download_dir
+                <a href="${access_url}config/folders" class="indented"><span class="glyphicon glyphicon-cog"></span></a>
+            </div>
+
+            <hr/>
+            <p>$T('wizard-tip-wiki') <a target="_blank" href="$helpuri">$T('menu-wiki')</a> <span class="glyphicon glyphicon-info-sign"></span></p>
+
         </div>
         <hr />
         <div class="row">
             <div class="col-xs-12 text-center">
                 <input type="hidden" name="session" id="apikey" value="$session"/>
-                <a class="btn btn-default disabled" href="$access_url">$T('wizard-goto') <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-success" href="$access_url">$T('wizard-goto') <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
     </div>
