--- a/interfaces/wizard/one.html
+++ b/interfaces/wizard/one.html
@@ -49,7 +49,7 @@
                             <div class="col-sm-4"></div>
                             <div class="col-sm-8">
                                 <a href="#" onclick="\$('#server-hidden-settings').removeClass('hidden');\$(this).parent().parent().hide()">
-                                    <span class="glyphicon glyphicon-cog"></span> $T('showAllHis')
+                                    <span class="glyphicon glyphicon-cog"></span> $T('button-advanced')
                                 </a>
                             </div>
                         </div>
@@ -63,7 +63,7 @@
                             <div class="form-group">
                                 <label for="connections" class="col-sm-4 control-label">$T('srv-connections')</label>
                                 <div class="col-sm-8">
-                                    <input type="number" class="form-control" name="connections" id="connections" value="<!--#if $connections then $connections else '6'#-->" data-toggle="tooltip" data-placement="right" title="$T('wizard-server-con-explain') $T('wizard-server-con-eg')" />
+                                    <input type="number" class="form-control" name="connections" id="connections" value="<!--#if $connections then $connections else '8'#-->" data-toggle="tooltip" data-placement="right" title="$T('wizard-server-con-explain') $T('wizard-server-con-eg')" />
                                 </div>
                             </div>
                         </div>
