--- a/interfaces/wizard/one.html
+++ b/interfaces/wizard/one.html
@@ -40,7 +40,7 @@
                                  $T('srv-ssl')
                             </label>
                             <div class="col-sm-8 input-checkbox">
-                                <input type="checkbox" id="ssl" name="ssl" value="1" data-toggle="tooltip" data-placement="right" title="$T('wizard-server-ssl-explain')"/>
+                                <input type="checkbox" id="ssl" name="ssl" value="1" <!--#if $ssl == 1 then 'checked' else ''#--> data-toggle="tooltip" data-placement="right" title="$T('wizard-server-ssl-explain')"/>
                             </div>
                         </div>
                         <div class="form-group">
