--- a/interfaces/wizard/one.html
+++ b/interfaces/wizard/one.html
@@ -87,7 +87,7 @@
                     </div>
                     <div class="col-md-5">
                         <div class="clearfix"></div>
-                        <iframe style="float: right; width: 315px; height: 315px;" frameborder="0" src="https://resources.sabnzbd.org/wizard/ad/$language"></iframe>
+                        <iframe style="float: right; width: 325px; height: 325px;" frameborder="0" src="https://sabnzbd.org/wizard#$language"></iframe>
                     </div>
                 </div>
                 <input type="hidden" name="session" value="$session" />
