Rework security flow of webpages
Have 1 wrapper that checks all secuirty checks and exposes the package for CherryPy.
Cleaner code that can then be used to implement global security checks.
Merged wizard.py into interface.py and removed lots of overhead code that is handled by the general system.

--- a/interfaces/wizard/index.html
+++ b/interfaces/wizard/index.html
@@ -11,9 +11,9 @@
                     $T('explain-language')<br /><br />
                     <div class="main-container">
                         <!--#for $l, $language in $languages#-->
-                        <label class="language <!--#if $lang == $l then 'language-active' else ''#-->">
+                        <label class="language">
                             $language<br />
-                            <input type="radio" name="lang" id="$l" value="$l" <!--#if $lang == $l then 'checked="checked"' else ''#--> />
+                            <input type="radio" name="lang" id="$l" value="$l" <!--#if $active_lang == $l then 'checked="checked"' else ''#--> />
                         </label>
                         <!--#end for#-->
                         <!--#if not $languages#-->
