Wizard final page not linking to Folders config page
Closes #1163

--- a/interfaces/wizard/two.html
+++ b/interfaces/wizard/two.html
@@ -22,13 +22,13 @@
             <p><strong>$T('opt-complete_dir')</strong></p>
             <div class="quoteBlock">
                 $complete_dir
-                <a href="${access_url}config/folders" class="indented"><span class="glyphicon glyphicon-cog"></span></a>
+                <a href="${access_url}/config/folders#complete_dir" class="indented"><span class="glyphicon glyphicon-cog"></span></a>
             </div>
 
             <p><strong>$T('opt-download_dir')</strong></p>
             <div class="quoteBlock">
                 $download_dir
-                <a href="${access_url}config/folders" class="indented"><span class="glyphicon glyphicon-cog"></span></a>
+                <a href="${access_url}/config/folders#complete_dir" class="indented"><span class="glyphicon glyphicon-cog"></span></a>
             </div>
 
             <hr/>
