--- a/interfaces/wizard/one.html
+++ b/interfaces/wizard/one.html
@@ -20,7 +20,7 @@
                         <div class="form-group">
                             <label for="host" class="col-sm-4 control-label">$T('srv-host')</label>
                             <div class="col-sm-8">
-                                <input type="text" class="form-control" name="host" id="host" value="$host" placeholder="$T('wizard-example') news.giganews.com" />
+                                <input type="text" class="form-control" name="host" id="host" value="$host" placeholder="$T('wizard-example') news.newshosting.com" />
                             </div>
                         </div>
                         <div class="form-group">
