Replace "session" by "apikey"
Out with the old crap

--- a/interfaces/wizard/one.html
+++ b/interfaces/wizard/one.html
@@ -90,7 +90,7 @@
                         <iframe style="float: right; width: 325px; height: 325px;" frameborder="0" src="https://sabnzbd.org/wizard#$active_lang"></iframe>
                     </div>
                 </div>
-                <input type="hidden" name="session" value="$session" />
+                <input type="hidden" name="apikey" value="$apikey" />
             </div>
             <hr />
             <div class="row">
