--- a/interfaces/wizard/two.html
+++ b/interfaces/wizard/two.html
@@ -38,7 +38,7 @@
         <hr />
         <div class="row">
             <div class="col-xs-12 text-center">
-                <input type="hidden" name="session" id="apikey" value="$session"/>
+                <input type="hidden" name="apikey" id="apikey" value="$apikey"/>
                 <a class="btn btn-success" href="$access_url">$T('wizard-goto') <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
