Additional cleanup of interface.py functions

--- a/interfaces/wizard/index.html
+++ b/interfaces/wizard/index.html
@@ -27,7 +27,7 @@
             <hr />
             <div class="row">
                 <div class="col-xs-4 text-center">
-                    <a class="btn btn-danger" href="./exit"><span class="glyphicon glyphicon-remove"></span> $T('wizard-exit')</a>
+                    <a class="btn btn-danger" href="../shutdown/?apikey=$apikey&amp;pid=$pid"><span class="glyphicon glyphicon-remove"></span> $T('wizard-exit')</a>
                 </div>
                 <div class="col-xs-4 text-center">
                 </div>
