--- a/interfaces/wizard/index.html
+++ b/interfaces/wizard/index.html
@@ -30,6 +30,7 @@
                     <a class="btn btn-danger" href="../shutdown/?apikey=$apikey&amp;pid=$pid"><span class="glyphicon glyphicon-remove"></span> $T('wizard-exit')</a>
                 </div>
                 <div class="col-xs-4 text-center">
+                    <a href="../config/general/#admin_backup">$T('restore-backup')</a>
                 </div>
                 <div class="col-xs-4 text-center">
                     <button class="btn btn-default">$T('wizard-start') <span class="glyphicon glyphicon-chevron-right"></span></button>
