--- a/interfaces/wizard/index.html
+++ b/interfaces/wizard/index.html
@@ -26,13 +26,13 @@
             </div>
             <hr />
             <div class="row">
-                <div class="col-xs-4 text-center">
+                <div class="col-md-4 text-center">
                     <a class="btn btn-danger" href="../shutdown/?apikey=$apikey&amp;pid=$pid"><span class="glyphicon glyphicon-remove"></span> $T('wizard-exit')</a>
                 </div>
-                <div class="col-xs-4 text-center">
-                    <a href="../config/general/#admin_backup">$T('restore-backup')</a>
+                <div class="col-md-4 text-center">
+                    <a class="btn btn-default" href="../config/general/#backup_config_file"><span class="glyphicon glyphicon-open"></span> $T('restore-backup')</a>
                 </div>
-                <div class="col-xs-4 text-center">
+                <div class="col-md-4 text-center">
                     <button class="btn btn-default">$T('wizard-start') <span class="glyphicon glyphicon-chevron-right"></span></button>
                 </div>
             </div>
