--- a/interfaces/wizard/index.html
+++ b/interfaces/wizard/index.html
@@ -30,7 +30,7 @@
                     <a class="btn btn-danger" href="../shutdown/?apikey=$apikey&amp;pid=$pid"><span class="glyphicon glyphicon-remove"></span> $T('wizard-exit')</a>
                 </div>
                 <div class="col-md-4 text-center">
-                    <a class="btn btn-default" href="../config/general/#backup_config_file"><span class="glyphicon glyphicon-open"></span> $T('restore-backup')</a>
+                    <a class="btn btn-default" href="../config/general/#config_backup_file"><span class="glyphicon glyphicon-open"></span> $T('restore-backup')</a>
                 </div>
                 <div class="col-md-4 text-center">
                     <button class="btn btn-default">$T('wizard-start') <span class="glyphicon glyphicon-chevron-right"></span></button>
