--- a/interfaces/wizard/one.html
+++ b/interfaces/wizard/one.html
@@ -15,6 +15,8 @@
 
                 <br /><br />
 
+                <input type="hidden" name="server" value="$server" />
+
                 <div class="row">
                     <div class="col-md-7 form-horizontal">
                         <div class="form-group">
