Make Config link to wiki dynamic

--- a/interfaces/wizard/two.html
+++ b/interfaces/wizard/two.html
@@ -32,7 +32,7 @@
             </div>
 
             <hr/>
-            <p>$T('wizard-tip-wiki') <a target="_blank" href="$helpuri">$T('menu-wiki')</a> <span class="glyphicon glyphicon-info-sign"></span></p>
+            <p>$T('wizard-tip-wiki') <a target="_blank" href="https://sabnzbd.org/wiki/">$T('menu-wiki')</a> <span class="glyphicon glyphicon-info-sign"></span></p>
 
         </div>
         <hr />
