Further improvements to dark mode

--- a/interfaces/wizard/one.html
+++ b/interfaces/wizard/one.html
@@ -48,7 +48,7 @@
                         <div class="form-group">
                             <div class="col-sm-4"></div>
                             <div class="col-sm-8">
-                                <a href="#" onclick="\$('#server-hidden-settings').removeClass('hidden');\$(this).parent().parent().hide()">
+                                <a href="#" class="wizard-advanced-settings" onclick="\$('#server-hidden-settings').removeClass('hidden');\$(this).parent().parent().hide()">
                                     <span class="glyphicon glyphicon-cog"></span> $T('button-advanced')
                                 </a>
                             </div>
