--- a/interfaces/wizard/one.html
+++ b/interfaces/wizard/one.html
@@ -57,13 +57,13 @@
                             <div class="form-group">
                                 <label for="port" class="col-sm-4 control-label">$T('srv-port')</label>
                                 <div class="col-sm-8">
-                                    <input type="number" class="form-control" name="port" id="port" value="<!--#if $port then $port else '563' #-->" />
+                                    <input type="number" class="form-control" name="port" id="port" value="<!--#if $port then $port else '563' #-->" min="0" max="65535" />
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="connections" class="col-sm-4 control-label">$T('srv-connections')</label>
                                 <div class="col-sm-8">
-                                    <input type="number" class="form-control" name="connections" id="connections" value="<!--#if $connections then $connections else '8'#-->" data-toggle="tooltip" data-placement="right" title="$T('wizard-server-con-explain') $T('wizard-server-con-eg')" />
+                                    <input type="number" class="form-control" name="connections" id="connections" value="<!--#if $connections then $connections else '8'#-->" min="1" max="500" data-toggle="tooltip" data-placement="right" title="$T('wizard-server-con-explain') $T('wizard-server-con-eg')" />
                                 </div>
                             </div>
                             <div class="form-group">
