--- a/interfaces/wizard/one.html
+++ b/interfaces/wizard/one.html
@@ -70,10 +70,12 @@
                                 <label for="ssl_verify" class="col-sm-4 control-label">$T('opt-ssl_verify')</label>
                                 <div class="col-sm-8">
                                     <select name="ssl_verify" id="ssl_verify" class="form-control">
-                                        <option value="2" <!--#if $ssl_verify == 2 then 'selected="selected"' else ""#--> >$T('ssl_verify-strict')</option>
-                                        <option value="1" <!--#if $ssl_verify == 1 then 'selected="selected"' else ""#--> >$T('ssl_verify-normal')</option>
+                                        <option value="3" <!--#if $ssl_verify == 3 then 'selected="selected"' else ""#--> >$T('ssl_verify-strict')</option>
+                                        <option value="2" <!--#if $ssl_verify == 2 then 'selected="selected"' else ""#--> >$T('ssl_verify-medium')</option>
+                                        <option value="1" <!--#if $ssl_verify == 1 then 'selected="selected"' else ""#--> >$T('ssl_verify-minimal')</option>
                                         <option value="0" <!--#if $ssl_verify == 0 then 'selected="selected"' else ""#--> >$T('ssl_verify-disabled')</option>
                                     </select>
+                                    <span class="desc">$T('explain-ssl_verify').replace('-', '<br/>-')</span>
                                 </div>
                             </div>
                         </div>
